# cv-fastapi-project

./: .gitignore  .gitlab-ci.yml  Dockerfile  cv_database.db  main.py  models.py  pyproject.toml  test_main.py
static/: app.js  style.css
templates/: index.html
