[project]
name = "modelservingapi"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "mediapipe>=0.10.32",
    "opencv-python>=4.13.0.92",
    "pytest>=9.0.3",
    "scikit-learn>=1.8.0",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
]
